# AI-Quant-Investment-Advisor

./: README.md  app.py  investment_report_AAPL.md  investment_report_AMZN.md  investment_report_MSFT.md  investment_report_NVDA.md  investment_report_ORCL.md  main.py  pyproject.toml
src/agent/: agent.py  crew.py  tasks.py
src/agent/tools/: financial.py  scraper.py
src/api/: main.py  module.py  routes.py
src/shared/: config.py  database.py  storage.py
